--- a/public/html/about/index.html
+++ b/public/html/about/index.html
@@ -15,13 +15,14 @@
         <a href="../../../index.html"><img class="fsl-logo" src="../../images/FSL08.png" alt="FSL"></a>
     </div>
 
-    <div class="navbar">
-        <a class="active" href="../home/index.html">Home</a>
+    <div class="navbar" id="navbar">
+        <a class="active" href="../about/index.html">Home</a>
         <a href="../news/index.html">News</a>
         <a href="../clubs/index.html">Clubs</a>
         <a href="../players/index.html">Players</a>
         <a href="../fixtures/index.html">Stats</a>
         <a href="../login/index.html" style="float: right;"><i class="fa fa-fw fa-user"></i>LOGIN</a>
+        <a href="javascript:void(0);" class="menu" onclick="navbarDropdown()"><i class="fa fa-bars"></i></a>
     </div>
     <div class="razmak"></div>
     <section class="about">
@@ -94,6 +95,8 @@
         </div>
         <img src="../../images/FSL08.png" alt="Logo" class="logo">
     </footer>
+
+    <script src="../../js/behaviour.js"></script>
 </body>
 
 </html>
