--- a/public/html/login/index.html
+++ b/public/html/login/index.html
@@ -30,7 +30,7 @@
           </div>
 
           <div class="container signin">
-            <p>Don't have an account? <a href="../register/index.html">Sign up</a>.</p>
+            <p>Don't have an account? <a href="../register/index.html">Sign uup</a>.</p>
           </div>
         </form>
       </div>
